public/css/custom.css
@font-face {
	font-family: 'Open Sans';
	src: url('/public/fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
}
html {
    font-family: "Open Sans", sans-serif;
}
.container.content {
    min-height: calc(100vh - 18rem);
}
.posts {
    margin-bottom: 15px;
}
.map {
    width: 100%;
    height: 500px;
}
.tag-link {
    margin: 5px;
}
.tag-highlighted {
    font-weight: bold;;
}
#promo {
   /* the promo bar is only revealed if no promo=false cookie is found */
    display: none;
    width: 100%;
    background-color: black;
    color: white;
    padding: 10px;
    text-align: center;
    font-size: 1.3em;
}
#promo-interior {
    max-width: 46rem;
    margin: auto;
}
#sidebar-toggle-phantom {
    float: left;
    width: 70px;
    height: 55px;
}
#promo-dismiss {
    text-align: right;
    max-width: 46em;
    margin: auto;
}
#promo-dismiss a {
    color: white;
    font-size: 0.8em;
}
#map-embed {
    width: 100%;
    height: 250px;
    padding: 10px;
}
#map-embed iframe {
    width: 100%;
    height: 100%;
    border: 0;
}
#mobile-banner {
    text-align: center;
}
.map iframe {
    width: 100%;
    height: 450px;
    margin-bottom: 15px;
}
.centered {
    text-align: center;
}
.masthead-title {
    text-align: center;
}
.region-image {
    margin: auto;
}

#bus-light-rail {
    accent-color: #0288D1;
}
#bus-light-rail-far {
    accent-color: #0097A7;
}
#bus-weekday-only {
    accent-color: #1A237E;
}
#rail-ferry {
    accent-color: #A52714;
}
#rail-ferry-far {
    accent-color: #880E4F;
}
#bart {
    accent-color: #F57C00;
}
#bart-far {
    accent-color: #E65100;
}
#shuttles {
    accent-color: #757575;
}

.infobox-title {
    font-weight: bold;
}

.infobox-child {
    padding-bottom: 10px;
}

@media (max-width: 28em) {
    .ol-attribution ul {
        font-size: 10px !important;
    }
}

@media (min-width: 1200px) {
    #sidebar-checkbox-label {
        display: none;
    }
    .container {
        margin-left: 16rem;
    }

    #map-embed {
        float: right;
        width: 350px;
        height: 250px;
    }

    .shared-container {
        text-align: center;
    }

    .half {
        width: 49%;
        max-height: 320px;
        display: inline-block;
    }
}

@media (min-width: 1400px) {
    #sidebar-checkbox:checked ~ .sidebar,
    #sidebar-checkbox:checked ~ .wrap,
    #sidebar-checkbox:checked ~ .sidebar-toggle {
    -webkit-transform: none;
        -ms-transform: none;
            transform: none;
        left: 0rem;
    }

    .layout-reverse #sidebar-checkbox:checked ~ .sidebar-toggle {
        -webkit-transform: none;
            -ms-transform: none;
                transform: none;
        left: 14rem;
      }

    .sidebar-overlay #sidebar-checkbox:checked ~ .wrap {
        -webkit-transform: none;
            -ms-transform: none;
                transform: none;
    }
    
    .infobox {
        top: 100px;
        width: 300px;
        left: 1175px;
        position: fixed;
        padding: 5px;
        display: grid;
    }

    .infobox-filter {
        position: absolute;
        width: auto;
    }

    .infobox.region-image {
        width: auto;
        max-width: min(calc(100% - 13rem - 56rem - 10rem), 700px);
    }

    .infobox.map-page {
        top: 450px;
    }
}

@media (prefers-color-scheme: dark) {
    #promo-dismiss a {
       color: black;
   }
    #promo {
       background-color: white;
       color: black;
   }
   /* overrides for lanyon.css */
    .theme-base-0f .sidebar, .theme-base-0f .sidebar-toggle:active, .theme-base-0f #sidebar-checkbox:checked ~ .sidebar-toggle {
       background-color: #55270e;
   }
    .theme-base-0f .container a, .theme-base-0f .sidebar-toggle, .theme-base-0f .related-posts li a:hover {
       color: #ec9567;
   }
    .sidebar-overlay #sidebar-checkbox:checked ~ .sidebar-toggle {
       box-shadow: 0 0 0 .25rem #000;
   }
    .sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
       box-shadow: .25rem 0 .5rem rgba(255, 255, 255, 0.1);
   }
    .layout-reverse.sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
       box-shadow: -.25rem 0 .5rem rgba(255, 255, 255, 0.1);
   }
    h1, h2, h3, h4, h5, h6 {
       color: #cecece;
   }
    .masthead {
       border-bottom: #111111;
   }
    .masthead-title {
       color: #afafaf;
   }
    .masthead-title a {
       color: #afafaf;
   }
    .masthead-title small {
       color: #afafaf;
   }
    .sidebar {
       color: rgba(0, 0, 0, 0.6);
       background-color: #dfdfdf;
   }
    .sidebar a {
       color: #fff;
   }
    .sidebar-nav {
       border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
    .sidebar-nav-item {
       border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
    .sidebar-nav-item.active, a.sidebar-nav-item:hover, a.sidebar-nav-item:focus {
       background-color: rgba(0, 0, 0, 0.1);
   }
    .sidebar-toggle {
       color: #afafaf;
       background-color: #000;
   }
    #sidebar-checkbox:checked ~ .sidebar-toggle {
       color: #000;
       background-color: #aaa;
   }
    .pagination-item {
       border: #111;
   }
    a.pagination-item:hover {
       background-color: #0a0a0a;
   }
    .pagination {
       color: #333333;
   }
    .post-title a {
       color: #cfcfcf;
   }
    .post-date {
       color: #656565;
   }
    .related {
       border-top: #111111;
   }
    .related-posts li small {
       color: #666666;
   }
    .related-posts li a:hover {
       color: #268bd2;
   }
   /* overrides for poole.css */
    body {
       color: #aeaeae;
       background-color: #130904;
   }
    a {
       color: #268bd2;
   }
    h1, h2, h3, h4, h5, h6 {
       color: #cecece;
   }
    strong {
       color: #cfcfcf;
   }
    hr {
       border-top: #111;
       border-bottom: #000;
   }
    abbr {
       color: #aaa;
   }
    abbr[title] {
       border-bottom: #1a1a1a;
   }
    code {
       color: #bf616a;
       background-color: #060606;
   }
    pre {
       background-color: #060606;
   }
    blockquote {
       color: #858585;
       border-left: #1a1a1a;
   }
    table {
       border: 1px solid #1a1a1a;
   }
    td, th {
       border: 1px solid #1a1a1a;
   }
    tbody tr:nth-child(odd) td, tbody tr:nth-child(odd) th {
       background-color: #060606;
   }
    .message {
       color: #8e8e8e;
       background-color: #060606;
   }
    .masthead-title {
       color: #afafaf;
   }
    .masthead-title a {
       color: #afafaf;
   }
    .masthead-title small {
       color: #3f3f3f;
   }
    .page-title, .post-title, .post-title a {
       color: #cfcfcf;
   }
    .post-date {
       color: #656565;
   }
    .related {
       border-top: #111;
   }
    .related-posts li small {
       color: #666;
   }
    .related-posts li a:hover {
       color: #268bd2;
   }
    .pagination {
       color: #333;
   }
    .pagination-item {
       border: 1px solid #111;
   }
    a.pagination-item:hover {
       background-color: #0a0a0a;
   }
}

